@@ -5,6 +5,9 @@ Version 1.8.8
        with multiple targets selected. (Stefan)
 - BUG: Issue #642: Log message not saved in history
        on cancel. (Stefan)
+- BUG: Issue #644: Bug in rename when "similar file name"
+       renames are involved and file names
+       include multiple dots. (Stefan)
 
 Version 1.8.7
 - BUG: Issue #633: Relocate dialog does
